--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,20 @@
 }
 
 body {
-  background: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  background: #FFFBF1;
+  color: #231F20;
+  font-family: "Kanit", sans-serif;
+  font-weight: 800;
+}
+
+.toggle__button {
+  font-family: "Kanit", sans-serif;
+  font-weight: 300;
+  border: none;
+  background: orange;
+  padding: 5px 10px;
+  border-radius: 5px;
+  outline: none;
+	cursor: pointer;
+  margin-left: 20px;
 }
