--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,8 @@
 	display: flex;
 	align-items: center;
 	padding: 0 20px;
+	font-family: "Kanit", sans-serif;
+  	font-weight: 300;
 }
 
 .username {
