--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -8,7 +8,7 @@
 	font-family: "Kanit", sans-serif;
   	font-weight: 300;
   	border: none;
-  	background: orange;
+  	background: #FFE6C8;
   	padding: 5px 10px;
   	border-radius: 5px;
 }
