--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,10 +4,12 @@
 	display: flex;
 	align-items: center;
 	padding: 0 20px;
-	font-family: "Kanit", sans-serif;
-  	font-weight: 300;
+	justify-content: center;
+	margin-bottom: 30px;
 }
 
-.username {
-	margin-left: auto;
+.header__button {
+	color: #FFA744;
+	font-family: "Kanit", sans-serif;
+  	font-weight: 600;
 }
