--- a/src/components/balance/balance.css
+++ b/src/components/balance/balance.css
@@ -2,16 +2,17 @@
 	margin: auto;
 	border: 2px solid #231F20;
 	background: white;
-	width: 188px;
-	height: 157px;
+	width: 215px;
+	height: 165px;
 	border-radius: 10px;
-	overflow: hidden; /* добавляем overflow: hidden */
-	position: relative; /* добавляем position: relative для позиционирования дочерних элементов */
+	overflow: hidden;
+	position: relative;
+	box-shadow: 3px 3px 0px 0px #231F20;
 }
 
 .balance__title {
   	font-weight: 400;
-	font-size: 12px;
+	font-size: 14px;
 	opacity: 50%;
 	margin-top: 10px;
 	margin-left: 10px;
@@ -19,17 +20,31 @@
 }
 
 .balance__counter {
-	font-size: 46px;
+	font-size: 50px;
 	font-weight: 500;
 	margin-left: 10px;
 	margin-bottom: 5px;
 }
 
 .balance__img {
-	height: 83.34px;
 	width: 84px;
 	margin-top: -10px;
-	position: absolute; /* позиционируем изображение абсолютно */
-	bottom: -10; /* прижимаем изображение к нижней границе родительского блока */
-	left: 10px; /* прижимаем изображение к правой границе родительского блока */
+	position: absolute; 
+	bottom: -10; 
+	left: 10px; 
 }
+
+.swop__button {
+	width: 80px;
+	height: 28px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #FFB800;
+  	font-weight: 600;
+	font-size: 10px;
+	border-radius: 7px;
+	box-shadow: 2px 2px 0px 0px #231F20;
+	margin: -5px 5px 10px 110px;
+}
+
