--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,11 @@
 body {
   background: #FFFBF1;
   color: #231F20;
-  font-family: "Kanit", sans-serif;
+  font-family: "Inter Tight", sans-serif;
   font-weight: 800;
 }
 
 .toggle__button {
-  font-family: "Kanit", sans-serif;
   font-weight: 300;
   border: none;
   background: orange;
