--- a/src/components/balance/balance.css
+++ b/src/components/balance/balance.css
@@ -2,8 +2,8 @@
 	margin: auto;
 	border: 2px solid #231F20;
 	background: white;
-	width: 250px;
-	height: 185px;
+	width: 300px;
+	height: 210px;
 	border-radius: 10px;
 	overflow: hidden;
 	position: relative;
@@ -12,39 +12,39 @@
 
 .balance__title {
   	font-weight: 400;
-	font-size: 16px;
+	font-size: 18px;
 	opacity: 50%;
-	margin-top: 10px;
-	margin-left: 10px;
-	margin-bottom: -15px;
+	margin-top: 12px;
+	margin-left: 15px;
+	margin-bottom: -10px;
 }
 
 .balance__counter {
-	font-size: 55px;
-	font-weight: 600;
+	font-size: 65px;
+	font-weight: 900;
 	margin-left: 10px;
 	margin-bottom: 5px;
 }
 
 .balance__img {
-	width: 100px;
-	margin-top: -15px;
+	width: 120px;
 	position: absolute; 
-	bottom: -10; 
+	bottom: -10px; 
 	left: 15px; 
 }
 
 .swop__button {
-	width: 100px;
-	height: 35px;
+	width: 125px;
+	height: 40px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background: #FFB800;
-  	font-weight: 600;
+  	font-weight: 800;
 	font-size: 10px;
 	border-radius: 7px;
 	box-shadow: 2px 2px 0px 0px #231F20;
-	margin: -10px 5px 18px 128px;
+	margin: 5px 5px 9px 150px;
+	cursor: pointer;
 }
 
